--- a/content/about.html
+++ b/content/about.html
@@ -12,27 +12,30 @@ status=published
 <p>Here are a few highlights in the history of JavaCC, FreeCC, and CongoCC:</p>
 <ul>
     <li><strong>1996: </strong>JavaCC developed and released internally at Sun Microsystems and at a startup company Metamata. Based on Java v1.</li>
-    <li><strong>1997: </strong> JJTree added to JavaCC codebase, possibly by a different person or team than worked on the original JavaCC</li>
+    <li><strong>1997: </strong> JJTree preprocessor added to JavaCC codebase, implemented by a different person (Rob Duncan) than those who implemented on the original JavaCC</li>
     <li><strong>1998: </strong>JavaCC acquired by Webgain but was still available for free download</li>
     <li><strong>2001: </strong>Webgain falls victim to 2001 dot-com crash and JavaCC becomes an asset of Sun Microsystems again</li>
-    <li><strong>2003: </strong>Sun Microsystems releases JavaCC as open source.</li>
-    <li><strong>2008: </strong>JavaCC was forked as the FreeCC project. The FreeMarker template engine, also written in Java, was incorporated into the project at this time to leverage the power of a templating engine to simplify and amplify the code generation capabilities of FreeCC.</li>
+    <li><strong>2003: </strong>Sun Microsystems releases JavaCC (and JJTree) as open source.</li>
+    <li><strong>2008: </strong>JavaCC was forked as the FreeCC project. FreeCC leveraged the FreeMarker template engine (that also was based on JavaCC) to simplify and amplify the code generation capabilities of FreeCC.</li>
+        <ul>
+            <li>Introduced INCLUDE statement that allows a large grammar to be broken up into multiple physical files</li>
+            <li>Introduced INJECT statement in grammar files allow Java code to be added to any generated file. Inject statements can be added to grammar file close to where their relevant productions</li>
+            <li>FreeCC unified the JavaCC and JJTree preprocessor into a single tool, thus simplifying the workflow of a typical JavaCC-based project</li>
+            <li>Building an AST Tree is the default, though it can be turned off if desired</li>
+        </ul>
     <li><strong>2009 - 2019: </strong>Development hiatus</li>
-    <li><strong>2019: </strong>Development resumes, now rebranded as JavaCC 21. Codebase is incrementally refactored and rewritten until almost all source code has been replaced. Changes and improvements include:
+    <li><strong>2020 - 2022 : </strong>Development resumes, now rebranded as JavaCC 21. Codebase is incrementally refactored and rewritten until almost all source code has been replaced. Changes and improvements include:
         <ul>
             <li>Streamlined grammar syntax that removed a lot of empty punctuation marks</li>
-            <li>Include statement that allows a large grammar to be broken up into multiple physical files</li>
-            <li>Inject statements in grammar files allow Java code to be added to any generated file. Inject statements can be added to grammar file close to where their relevant productions</li>
             <li>Preprocessor that implements #define/#undef/#if/#elif/#else/#endif in same way as C# preprocessor</li>
-            <li>AST Tree is normally generated instead of requiring a separate tree-generating step, eliminating need for editing of generated files. Tree building can be turned off if desired</li>
             <li>Contextual predicates provide a way of checking whether we are at a given point in a parse</li>
             <li>Improved lookahead capabilies available in new SCAN keyword, including the up-to-here marker =>||</li>
-            <li>Lookbehind capabilities</li>
             <li>Nested syntactic lookaheads have been fixed</li>
             <li>Fault-tolerant parsing that incorporates heuristics for building the AST into the parser</li>
             <li>ATTEMPT/RECOVER statement to replace try/catch blocks to produce more meaningful fallback or recovery actions when the attempt fails.</li>
             <li><strong>Python 3.10 grammar/parser</strong> available for your own projects</li>
             <li><strong>C# grammar/parser</strong> available for your own projects</li>
+            <li>Support for generating parsers in Python and C# as well Java. (The work of Vinay Sajip)</li>
         </ul>
     </li>
     <li><strong>2022: </strong>JavaCC 21 rebranded as CongoCC</li>
